--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,6 @@
-/* 
-    General Styles
-*/
+@import "~bootstrap/scss/bootstrap.scss";
+
+body {
+ background-image: url("levelup.png");
+ background-size: cover;
+}
