--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 body {
- background-image: url("levelup.png");
+ background-image: url("background.png");
  background-size: cover;
 }
