updated translate page. Current translateDocs page will change

--- a/src/styles/translate.css
+++ b/src/styles/translate.css
@@ -8,3 +8,26 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     /*background-color: #D0F0C0;*/
 }
+
+#shadow{
+    border-color: green;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-bottom: 20px;
+    color: #696969;
+}
+ul{
+    list-style: none;
+    justify-content: center;
+    padding: 0;
+}
+
+.btn{
+    margin-left: 5px;
+}
+
+.btn-link{
+    color: green;
+}
+#green{
+    color: green;
+}
